--- a/agents/deno.json
+++ b/agents/deno.json
@@ -10,6 +10,6 @@
     "@deno/gfm": "jsr:@deno/gfm@^0.9.0"
   },
   "tasks": {
-    "img_agent": "deno run --allow-net --allow-env img_agent.tsx"
+    "img_agent": "deno run --allow-all img_agent.tsx"
   }
 }
