update with deno APIs

--- a/deno/deno.json
+++ b/deno/deno.json
@@ -12,6 +12,7 @@
   "tasks": {
     "dev": "deno run --allow-net --allow-env --allow-read --watch main.tsx",
     "start": "deno run --allow-net --allow-env --allow-read main.tsx",
-    "compile": "deno compile --target x86_64-unknown-linux-gnu --allow-net --allow-read -o backend-linux main.tsx"
-  },
+    "compile": "deno compile --target x86_64-unknown-linux-gnu --allow-net --allow-read -o backend-linux main.tsx",
+    "deploy": "deployctl deploy --prod --project=ai-saas main.tsx"
+  }
 }
